Fix overflow of jumbotron

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ body {
   margin: 0;
   text-align: center;
   position: relative;
+  overflow: hidden;
 }
 
 .jumbotron h1 {
